Issue with double tap persists so reverting to overflow:auto

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ body {
   z-index: 1;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #canvas {
